Fix list alignment in console output
R=pfaffe@chromium.org

Fixed: 425562178
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6651068
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>
Auto-Submit: Yang Guo <yangguo@chromium.org>

--- a/front_end/ui/legacy/components/object_ui/objectPropertiesSection.css
+++ b/front_end/ui/legacy/components/object_ui/objectPropertiesSection.css
@@ -20,6 +20,7 @@
   user-select: text;
 
   &::before {
+    flex-shrink: 0;
     margin-right: 2px;
   }
 }
